# LimerickAir

./: .gitignore  LA_Analysis.py  LA_BME280.py  LA_dropbox_upload.py  LAprocess.py  LICENSE  LimerickAir.py  LimerickAir30_2023-12-22_env.csv  LimerickAir30_2023-12-22_pm.csv  LimerickAirBasic.py  PMS7003.py  README.md  aqlocation.py  environment.yml  pyproject.toml  random.txt
limerickair/: LA_Analysis.py  LA_BME280.py  LA_GNSS.py  LA_PMS7003.py  LA_dropbox_upload.py  LA_utils.py  LA_utils_simple.py  LimerickAir.py  LimerickAirBasic.py  LimerickAirOffline.py  PMS7003.py  __init__.py  aqlocation.py
