[tool.poetry]
name = "limerickair"
version = "0.1.0"
description = ""
authors = ["bamacgabhann <127785144+breandan.macgabhann@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pyarrow = "^14.0.1"
pyserial = "^3.5"
pimoroni-bme280 = "^1.0.0"
pytest = "^7.4.3"
shapely = "^2.0.2"
geopandas = "^0.14.1"
pigpio = "^1.78"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
ipykernel = "^6.27.1"
sourcery = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
